# docker_litestar_piccolo_pg_starter

./: .env.example  .env.test  README.md  docker-compose-test.yml  docker-compose.yml  init.sh
services/backend/app/: .gitignore  README.md  pyproject.toml
services/backend/app/src/: app.py  config.py  constants.py  dtos.py  exceptions.py  lifespan.py  main.py  manifest.py  response_specs.py  versions.py
services/backend/app/src/base/: app.py  dtos.py  exceptions.py  lifespan.py  versions.py
services/backend/app/src/base/controllers/: all.py  base.py
services/backend/app/src/base/models/: all.py  base.py  exceptions.py
services/backend/app/src/controllers/: all.py  base.py  crud.py
services/backend/app/src/database/: exceptions.py  models.py  service.py
services/backend/app/src/logging/: service.py
services/backend/app/src/models/: all.py  base.py  column_types.py  constants.py  exceptions.py
services/backend/app/src/modules/_misc/: generate_notes.py
services/backend/app/src/modules/home/: controllers.py  dtos.py
services/backend/app/src/modules/note/: controllers.py  dtos.py  models.py
services/backend/app/src/modules/product/: controllers.py  dtos.py  models.py
services/backend/app/src/modules/product/seeds/: generate.py
services/backend/app/src/monkey_patches/: all.py  piccolo_orm.py
services/backend/app/tests/: conftest.py
services/backend/app/tests/modules/home/: test_home_routes.py
services/backend/app/tests/modules/note/: test_note_routes.py
services/backend/app/tests/modules/product/: test_product_routes.py
(+3 files in other folders)
